# politick

./: .gitignore  README.md  build.zig  build.zig.zon
docs/: dsl-sketch.md  milestone.md
driver/: pyproject.toml  run.ndjson
driver/politick_driver/: __init__.py  actors.py  cli.py  kernel.py  llm.py  log.py
driver/politick_driver/grammar/: diff.gbnf
driver/politick_driver/personas/: baron.md
driver/tests/: conftest.py  test_driver.py  test_log.py
driver/worlds/: legislature.json
src/: check.zig  commit_test.zig  derive.zig  external_test.zig  golden_test.zig  hash.zig  intern.zig  interp.zig  ir.zig  log.zig  main.zig  procedure_test.zig  root.zig  store.zig  tick.zig  value.zig
src/testdata/: poll_tax.ndjson
