[project]
name = "politick-driver"
version = "0.1.0"
description = "Persona driver for the politick kernel: turns actor intent into log entries via a local LLM."
requires-python = ">=3.11"
dependencies = ["httpx>=0.27"]

[project.scripts]
politick-driver = "politick_driver.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["politick_driver"]
